--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -37,6 +37,11 @@
     width: 50%; 
 }
 
+.block-only-text {
+    font-size: 2rem;
+    padding: 0;
+}
+
 .content-container {
     display: flex;
     justify-content: center;
@@ -64,32 +69,6 @@
 }
 
 .block-list li::before {
-    content: '- '; 
-    position: absolute;
-    left: 0; 
-}
-
-.block-list-whide {
-    text-align: left;
-    font-size: 1.8rem;
-    font-weight: 100;
-    flex-basis: 20%;
-    width: auto;
-    list-style-type: none;
-    margin-top: 10px;
-    padding-left: 10px;
-}
-
-.block-list-whide li {
-    margin: 10px;
-}
-
-.block-list-whide li {
-    position: relative; 
-    padding-left: 20px;
-}
-
-.block-list-whide li::before {
     content: '- '; 
     position: absolute;
     left: 0; 
@@ -145,6 +124,10 @@
 }
 
 @media (max-width: 480px) {
+    .block-text {
+        width: 120%;
+    }
+
     .para_c1_line_small_window {
         visibility: visible;
     }
@@ -158,50 +141,105 @@
     .para_c1_line_small_window::after {
         content: '';
         position: absolute;
-        left: 10%;
-        right: 10%;
         height: 2px;
         background-color: black;
+        width: 450px;
     }
 
-    .section, .block, .content-container, .block-list-whide, .block-image, .block-list-button {
-        flex-direction: column;
-        align-items: center;
-        width: 90%;
-        font-size: 1rem;
+    .content-container {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        gap: auto;
     }
 
-    .block-list {
-        flex-direction: column;
-        align-items: left;
-        width: 90%;
-        font-size: 1rem;
+    .block-list-text {
+        text-align: center;
+        width: 70%
     }
-
-    .block-title {
-        font-size: 0.6rem;
-    }
-
-    .block-text, .block-list, .block-list-whide {
-        font-size: 1rem;
+    
+    .block, .block-image, .block-list-button {
         width: 100%;
-        padding: 5px;
+        text-align: center; 
+        margin-bottom: 20px;
+    }
+    
+    .block-text, .block-list {
+        width: auto; 
     }
 
-    .block {
-        width: 65%;
-        border: 0;
+    .block-only-text {
+        font-size: 1rem;
+        width: 10%;
     }
 
+    .block-list li {
+        padding-left: 0; 
+    }
+    
+    .block-list li::before {
+        content: ''; 
+    }
+    
     .block-image {
-        height: 200px;
+        height: auto;
+        max-width: 600px; 
+        margin: 0 auto; 
+        left: 10%;    
     }
-        
+    
     .block-list-button {
         width: 80%; 
         max-width: 400px;
-        margin: 20px auto;
-        font-size: 0.8rem;
+    }
+
+    .block-list {
+        width: 120%; 
+        text-align: left;
+        margin-bottom: 20px; 
+        margin: 0 auto;
+    }
+
+    .block-list li {
+        margin: 10px;
+    }
+    
+    .block-list li {
+        position: relative; 
+        padding-left: 20px;
+    }
+    
+    .block-list li::before {
+        content: '- '; 
+        position: absolute;
+        left: 0; 
+    }
+
+    .block-title {
+        font-size: 1.2rem;
+    }
+
+    .block-text, .block-list {
+        font-size: 1.5rem;
+    }
+
+    .block-only-text {
+        font-size: 1.2rem;
+        width: 80%;
+    }
+
+    .block-image {
+        height: auto;
+    }
+
+    .block {
+        width: 75%;
+        border: 0;
+    }
+
+    .block-list-button {
+        font-size: 1.4rem;
+        width: 100%;
     }
 }
 
@@ -236,21 +274,26 @@
         gap: 20px; 
     }
     
-    .block, .block-list-whide, .block-image, .block-list-button {
+    .block, .block-image, .block-list-button {
         width: 100%;
         text-align: center; 
         margin-bottom: 20px;
     }
     
-    .block-text, .block-list, .block-list-whide {
+    .block-text, .block-list {
         width: auto; 
     }
+
+    .block-only-text {
+        font-size: 1.2rem;
+        width: 80%;
+    }
     
-    .block-list li, .block-list-whide li {
+    .block-list li li {
         padding-left: 0; 
     }
     
-    .block-list li::before, .block-list-whide li::before {
+    .block-list li::before li::before {
         content: ''; 
     }
     
@@ -269,7 +312,8 @@
     .block-list {
         width: 120%; 
         text-align: left;
-        margin-bottom: 20px; 
+        margin-bottom: 20px;
+        margin: 0 auto; 
     }
 
     .block-list li {
@@ -291,7 +335,7 @@
         font-size: 1.2rem;
     }
 
-    .block-text, .block-list, .block-list-whide {
+    .block-text, .block-list {
         font-size: 1.5rem;
     }
 
@@ -337,21 +381,26 @@
         gap: 20px; 
     }
     
-    .block, .block-list-whide, .block-image, .block-list-button {
+    .block, .block-image, .block-list-button {
         width: 100%;
         text-align: center; 
         margin-bottom: 20px;
     }
     
-    .block-text, .block-list, .block-list-whide {
+    .block-text, .block-list {
         width: auto; 
     }
+
+    .block-only-text {
+        font-size: 1.2rem;
+        width: 80%;
+    }
     
-    .block-list li, .block-list-whide li {
+    .block-list li li {
         padding-left: 0; 
     }
     
-    .block-list li::before, .block-list-whide li::before {
+    .block-list li::before li::before {
         content: ''; 
     }
     
@@ -370,6 +419,7 @@
         width: 100%; 
         text-align: left;
         margin-bottom: 20px; 
+        margin: 0 auto;
     }
 
     .block-list li {
@@ -391,7 +441,7 @@
         font-size: 3rem;
     }
 
-    .block-text, .block-list, .block-list-whide {
+    .block-text, .block-list {
         font-size: 1.5rem;
     }
 
@@ -438,21 +488,21 @@
         gap: 20px; 
     }
     
-    .block, .block-list-whide, .block-image, .block-list-button {
+    .block, .block-image, .block-list-button {
         width: 100%; 
         text-align: center; 
         margin-bottom: 20px; 
     }
     
-    .block-text, .block-list, .block-list-whide {
+    .block-text, .block-list {
         width: auto; 
     }
     
-    .block-list li, .block-list-whide li {
+    .block-list li li {
         padding-left: 0; 
     }
     
-    .block-list li::before, .block-list-whide li::before {
+    .block-list li::before li::before {
         content: '';
     }
     
