--- a/CSS/components/infoBox.css
+++ b/CSS/components/infoBox.css
@@ -6,7 +6,7 @@
 .info-box {
     font-family: 'Roboto', sans-serif;
     position: relative; 
-    width: 70%; 
+    width: 100%; 
     height: 80%;
     text-align: center;
     border-radius: 10px;
@@ -62,7 +62,7 @@
 @media (max-width: 480px) {
     .info-box p {
         margin: 0;
-        font-size: 1.1rem;
+        font-size: 1.4rem;
         width: 120%;
         margin-top: 20px;
     }
@@ -78,7 +78,7 @@
 @media (min-width: 481px) and (max-width: 768px){
     .info-box p {
         margin: 0;
-        font-size: 1.1rem;
+        font-size: 1.4rem;
         width: 120%;
         margin-top: 20px;
     }
@@ -92,7 +92,19 @@
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
+    .info-box p {
+        margin: 0;
+        font-size: 1.4rem;
+        width: 120%;
+        margin-top: 20px;
+    }
 
+    .info-box h1 {
+        margin: 0;
+        font-size: 1.6rem;
+        margin: auto;
+        padding: 10px;
+    }
 }
 
 @media (min-width: 1025px) and (max-width: 1500px) {
