--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -1,24 +1,27 @@
 .header {
     display: flex;
-    justify-content: space-between;
-    align-items: center; 
+    justify-content: baseline;
+    align-items: center;
     background-color: black;
-    padding: 10px;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-bottom: 30px;
     height: 180px;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
 }
 
 .logo-container {
     flex-grow: 1;
-    margin-right: 1rem; 
+    margin-right: 1rem;
 }
 
 .nav-item:not(:last-child) {
     margin-right: 1rem;
+    padding-top: 90px;
 }
 
 .nav-link {
-    font-size: 1.5rem; 
+    font-size: 1.5rem;
     text-decoration: none;
     color: white;
     padding: 10px;
@@ -28,61 +31,39 @@
     overflow: hidden;
 }
 
+.nav-link::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition: width 0.3s ease, left 0.3s ease;
+}
+
+.nav-link:hover::after, .nav-link:focus::after {
+    width: 100%;
+    left: 0;
+}
+
 .logo-image {
-    width: 300px;
-    height: 150px;
+    width: 230px;
+    height: auto;
 }
 
-/* Media Queries für verschiedene Geräte */
-@media (max-width: 1024px) { /* iPad Pro und kleinere Laptops */
-    .nav-link {
-        font-size: 1.2rem; /* Etwas kleinere Schrift */
-    }
+@media (max-width: 480px) {
+
 }
 
-@media (max-width: 768px) { /* iPad */
-    .nav-item {
-        margin-right: 0.5rem; /* Reduzierter Abstand */
-    }
+@media (min-width: 481px) and (max-width: 768px){
 
-    .logo-image {
-        height: 40px; /* Etwas kleineres Logo */
-    }
-
-    .nav-link {
-        font-size: 1rem; /* Weitere Reduzierung der Schriftgröße */
-    }
 }
 
-@media (max-width: 480px) { /* iPhone */
-    .header {
-        padding: 5px; /* Reduziertes Padding */
-    }
+@media (min-width: 769px) and (max-width: 1024px) {
 
-    .logo-container {
-        margin-right: 0.5rem; /* Reduzierter Rand */
-    }
-
-    .nav-item {
-        margin-right: 0.3rem; /* Minimale Abstände */
-    }
-
-    .nav-link {
-        font-size: 0.9rem; /* Kleine Schriftgröße für sehr kleine Bildschirme */
-    }
-
-    .logo-image {
-        height: 35px; /* Kleineres Logo */
-    }
 }
 
-@media (max-width: 330px) { /* Sehr kleine Geräte */
-    .logo-image {
-        height: 30px; /* Noch kleineres Logo */
-    }
+@media (min-width: 1025px) and (max-width: 1500px) {
 
-    .nav-link {
-        font-size: 0.8rem; /* Noch kleinere Schriftgröße */
-        padding: 5px; /* Reduziertes Padding */
-    }
 }
