--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -3,6 +3,7 @@
     flex-direction: column; 
     align-items: center; 
     justify-content: center; 
+    width: 100%;
 }
 
 .section p {
@@ -19,6 +20,7 @@
     text-align: center;
     margin-bottom: 20px;
     position: relative;
+    background-color: rgb(250, 250, 250);
 }
 
 .block-title {
@@ -29,17 +31,18 @@
 }
 
 .block-text {
-    text-align: center;
+    text-align: left; 
     font-size: 2rem;
-    margin: 10px auto; 
     padding: 10px 20px;
     font-weight: 100;
-    width: 50%; 
+    width: 60%; 
 }
 
 .block-only-text {
+    margin-right: 100px;
     font-size: 2rem;
     padding: 0;
+    width: 35%; 
 }
 
 .content-container {
@@ -51,7 +54,7 @@
 
 .block-list {
     text-align: left;
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 100;
     flex-basis: 27%;
     list-style-type: none;
@@ -110,8 +113,7 @@
 }
 
 .block {
-    width: 65%;
-    border: 2px solid #000;
+    width: 100%;
 }  
 
 .block-list-text {
@@ -122,6 +124,15 @@
     width: auto;
     padding: 0;
 }
+.text_and_list {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: flex-start; 
+    gap: 20px; 
+    width: 40%; 
+}
+
 
 @media (max-width: 480px) {
     .block-text {
