--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -12,12 +12,13 @@
 
 .training_type_list {
     list-style-type: none;
-    font-weight: 100;
     font-size: 1.8rem;
 }
 
 .training_type_list li {
+    font-weight: 100;
     margin: 0;
+    padding: 0;
 }
 
 .training_type_list li {
@@ -31,9 +32,17 @@
     left: 0; 
 }
 
+.training_type_list_no_header {
+    font-weight: 100;
+    margin: 0;
+}
+
 .training_type_list p {
     position: relative; 
+    font-weight: normal;
     padding: 0;
+    margin: 0;
+    margin-top: 30px;
 }
 
 .gruppentraining {
@@ -42,8 +51,8 @@
 }
 
 .block_pricing {
-    width: 65%;
-    border: 2px solid #000; 
+    width: 100%;
+    background-color: rgb(250, 250, 250);
 }  
 
 .block_title_pricing {
@@ -55,40 +64,18 @@
     margin-top: 20px;
 }
 
-select {
-    width: 300px; 
-    height: 60px; 
-    background-color: black; 
-    color: white; 
-    border: 1px solid black; 
-    font-size: 16px; 
-    -webkit-appearance: none; 
-    -moz-appearance: none;
-    appearance: none; 
-}
-
-select {
-    background: black url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="14" height="12" viewBox="0 0 18 18"><polygon fill="white" points="1,6 9,14 17,6" /></svg>') no-repeat right 10px center;
-    background-size: 14px 12px; 
-    padding-left: 10px; 
-    transition: background-color 0.3s, color 0.3s;
-}
-
-select:hover {
-    background-color: rgba(0,0,0,0);
-    color: black;  
-}
-
-select option {
-    background-color: white; 
-    color: black; 
-}
-
 .leistungen_type_button {
-    width: 140px; 
+    width: auto; 
+    padding: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-top: 30px;
+    margin-left: 15%;
+    letter-spacing: 2px;
     height: 60px; 
     border: 0;
-    font-size: 16px; 
+    font-size: 2rem; 
+    font-weight: 100;
     color: white;
     background-color: black;
     border: 1px solid black; 
@@ -99,4 +86,9 @@ select option {
 .leistungen_type_button:hover {
     background-color: rgba(0,0,0,0);
     color: black;   
+}
+
+.anfahrt_mwst {
+    text-align: center;
+    font-size: 1.4rem;
 }
