--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -23,6 +23,10 @@
     background-color: rgb(250, 250, 250);
 }
 
+.block h2 {
+    margin-top: 20px;
+}
+
 .block-title {
     margin: 0;
     padding: 10px 0;
@@ -43,6 +47,7 @@
     font-size: 2rem;
     padding: 0;
     width: 35%; 
+    text-align: left;
 }
 
 .content-container {
@@ -78,9 +83,10 @@
 }
 
 .block-image {
+    width: 500px;
     margin-top: auto;
     flex-basis: 20%;
-    height: 350px;
+    height: auto;
     border-radius: 10px;
 }
 
@@ -100,7 +106,7 @@
     display: block;
     margin: 20px auto;
     height: 60px;
-    width: 400px;
+    width: 500px;
     border: 0;
     border-radius: 5px;
     border: 1px solid black; 
