--- a/CSS/components/infoBox.css
+++ b/CSS/components/infoBox.css
@@ -20,6 +20,7 @@
     justify-content: center;
     align-items: center;
     z-index: 2; 
+    margin-top: auto;
 }
 
 .info_box_header {
@@ -43,7 +44,7 @@
     padding: 20px;
 }
 
-.info_box_header h1::before, .info_box_header h1::after {
+.info_box_header h1::before {
     content: '';
     position: absolute;
     left: 10%;
