--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -61,24 +61,23 @@
 }
 
 .leistungen_typ_container {
-    margin-top: 20px;
+    display: flex; /* Verwenden Sie Flexbox */
+    flex-direction: column; /* Ordnet die Kinder (Buttons) vertikal an */
+    align-items: center; 
 }
 
 .leistungen_type_button {
-    width: auto; 
-    padding: auto;
-    padding-left: 50px;
-    padding-right: 50px;
-    margin-top: 30px;
-    margin-left: 15%;
-    letter-spacing: 2px;
+    display: block; /* Block-Display (optional, da Buttons implizit als inline-block behandelt werden) */
     height: 60px; 
-    border: 0;
+    width: auto; /* Breite wird durch Padding definiert */
+    padding: 0 50px; /* Setzt Padding horizontal */
+    margin-top: 30px; /* Abstand zwischen den Buttons */
+    border: 1px solid black; /* Definiert die Button-Rahmen */
     font-size: 2rem; 
     font-weight: 100;
+    letter-spacing: 2px;
     color: white;
     background-color: black;
-    border: 1px solid black; 
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
 }
