--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -1,10 +1,14 @@
+@media (min-width: 1500px) {
+    .small_header {
+        display: none;
+    }
+}
+
 .header {
     display: flex;
     justify-content: baseline;
     align-items: center;
     background-color: black;
-    padding-left: 210px;
-    padding-right: 200px;
     padding-bottom: 30px;
     height: 160px;
     flex-wrap: wrap;
@@ -51,20 +55,4 @@
     width: 230px;
     height: auto;
     margin-top: -3%;
-}
-
-@media (max-width: 480px) {
-
-}
-
-@media (min-width: 481px) and (max-width: 768px){
-
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-
-}
-
-@media (min-width: 1025px) and (max-width: 1500px) {
-
 }
