set media-querie to min-width 1301px on header

--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -1,5 +1,7 @@
-.small_header {
-    display: none;
+@media (min-width: 1301px) {
+    .small_header {
+        display: none;
+    }
 }
 
 .header {
