removed bullet-points from dropdown in small-header

--- a/CSS/components/smallHeader.css
+++ b/CSS/components/smallHeader.css
@@ -36,12 +36,12 @@
     }
 
     .small_header li {
-        padding: 4px 40px; 
+        padding: 10px 30px; 
         position: relative;
     }
 
     .small_header li::before {
-        content: '◦';
+        content: '';
         position: absolute;
         left: 15px;
     }
