--- a/CSS/components/smallHeader.css
+++ b/CSS/components/smallHeader.css
@@ -26,6 +26,7 @@
         opacity: 0;
         max-height: 0;
         overflow: hidden;
+        z-index: 3;
         transition: all 0.5s ease; 
     }
 
