--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -59,6 +59,7 @@
     margin-bottom: 20px;
     position: relative;
     background-color: rgb(250, 250, 250);
+    width: 100%;
 }
 
 .block h2 {
@@ -81,10 +82,10 @@
 }
 
 .block-only-text {
-    margin-right: 100px;
+    display: flex;
     font-size: 2rem;
     padding: 0;
-    width: 35%; 
+    width: 40%; 
     text-align: left;
 }
 
@@ -156,15 +157,6 @@
     color: black;   
 }
 
-.block {
-    width: 100%;
-}  
-
-.block-list-text {
-    margin-left: 15px;
-    font-size: 1.7rem;
-}
-
 .image-button-container {
     width: auto;
     padding: 0;
@@ -181,7 +173,7 @@
 
 @media (max-width: 480px) {
     .block-text {
-        width: 120%;
+        width: 100%;
     }
 
     .para_c1_line_small_window {
@@ -204,14 +196,10 @@
 
     .content-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         gap: auto;
-    }
-
-    .block-list-text {
-        text-align: center;
-        width: 70%
     }
     
     .block, .block-image, .block-list-button {
@@ -222,11 +210,6 @@
     
     .block-text, .block-list {
         width: auto; 
-    }
-
-    .block-only-text {
-        font-size: 1rem;
-        width: 10%;
     }
 
     .block-list li {
@@ -250,7 +233,7 @@
     }
 
     .block-list {
-        width: 120%; 
+        width: 100%; 
         text-align: left;
         margin-bottom: 20px; 
         margin: 0 auto;
@@ -297,11 +280,15 @@
         font-size: 1.4rem;
         width: 100%;
     }
+    
+    .text_and_list {
+        width: 100%;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
     .block-text {
-        width: 120%;
+        width: 100%;
     }
 
     .para_c1_line_small_window {
@@ -366,7 +353,7 @@
     }
 
     .block-list {
-        width: 120%; 
+        width: 100%; 
         text-align: left;
         margin-bottom: 20px;
         margin: 0 auto; 
@@ -406,6 +393,9 @@
 
     .block-list-button {
         font-size: 1.4rem;
+        width: 100%;
+    }
+    .text_and_list {
         width: 100%;
     }
 }
