--- a/CSS/components/infoBox.css
+++ b/CSS/components/infoBox.css
@@ -6,7 +6,7 @@
 .info-box {
     font-family: 'Roboto', sans-serif;
     position: relative;
-    width: 80%;
+    width: 100%;
     height: 80%;
     text-align: center;
     border-radius: 10px;
@@ -39,7 +39,7 @@
     position: absolute;
     left: 10%;
     right: 10%;
-    height: 2px;
+    height: 1px;
     background-color: black;
 }
 
@@ -57,12 +57,9 @@
 }
 
 .phylosophie_text {
-    margin: auto;
     text-align: left;
-    width: 70%;
 }
 
-/* Media Queries */
 @media (max-width: 499px) {
     .home_main_text {
         font-size: 12px;
@@ -85,5 +82,15 @@
     .para_c1_line {
         margin-top: 8px;
         margin-bottom: 8px;
+    }
+
+    .info_box_header {
+        margin-top: -20px;
+    }
+
+    .info-box p  {
+        font-size: 12px;
+        width: 100%;
+        margin-top: -30px;
     }
 }
