--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -1,42 +1,40 @@
 .section {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
 }
 
 .section p {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
+    flex-direction: column;
+    align-items: center;
 }
 
 .mein_coaching_header {
     margin-top: 0;
+    margin-bottom: -2%;
     position: relative;
     width: 100%;
-    margin-bottom: -2%;
 }
 
 .header_mein_coaching_header {
-    font-family: 'Roboto', sans-serif;
     font-size: 3rem;
-    font-weight: normal;
     text-align: center;
+    margin: 40px;
     position: relative;
     padding: 20px;
 }
 
-.header_mein_coaching_header::before {
+.header_mein_coaching_header::before, .header_mein_coaching_header::after {
     content: '';
     position: absolute;
     left: 10%;
     right: 10%;
-    height: 2px;
+    height: 1px;
     background-color: black;
 }
-
 
 .header_mein_coaching_header::before {
     top: 0;
@@ -46,19 +44,11 @@
     bottom: 0;
 }
 
-.header_mein_coaching_header {
-    width:100%
-}
-
-.para_c1_line_small_window {
-    visibility: hidden;
-}
-  
 .block {
     text-align: center;
-    margin-bottom: 20px;
+    background-color: rgb(253, 253, 253);
     position: relative;
-    background-color: rgb(250, 250, 250);
+    margin-bottom: 0px;
     width: 100%;
 }
 
@@ -74,18 +64,17 @@
 }
 
 .block-text {
-    text-align: left; 
+    text-align: left;
     font-size: 1.7rem;
-    padding: 10px 20px;
+    padding: 0;
     font-weight: 100;
-    width: 65%; 
+    width: 65%;
 }
 
 .block-only-text {
     display: flex;
     font-size: 2rem;
-    padding: 0;
-    width: 40%; 
+    width: 40%;
     text-align: left;
 }
 
@@ -93,509 +82,117 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    gap: auto;
 }
 
 .block-list {
+    list-style-type: none;
     text-align: left;
     font-size: 2rem;
     font-weight: 100;
-    flex-basis: 27%;
-    list-style-type: none;
     margin-top: 10px;
     padding-left: 10px;
+    flex-basis: 27%;
 }
 
 .block-list li {
     margin: 10px;
-}
-
-.block-list li {
-    position: relative; 
+    position: relative;
     padding-left: 20px;
 }
 
 .block-list li::before {
-    content: '- '; 
+    content: '- ';
     position: absolute;
-    left: 0; 
+    left: 0;
 }
 
 .block-image {
     width: 500px;
     margin-top: auto;
-    flex-basis: 20%;
     height: auto;
     border-radius: 10px;
+    flex-basis: 20%;
 }
 
 .block-list-button {
-    margin: auto;
+    display: block;
+    margin: 20px auto;
     color: white;
     background-color: black;
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
     font-size: 2.2rem;
     letter-spacing: 2px;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.block-list-button {
     font-weight: 150;
-    display: block;
-    margin: 20px auto;
     height: 60px;
     width: 500px;
-    border: 0;
+    border: 1px solid black;
     border-radius: 5px;
-    border: 1px solid black; 
     transition: background-color 0.3s, color 0.3s;
 }
 
 .block-list-button:hover {
-    background-color: rgba(0,0,0,0);
-    color: black;   
+    background-color: rgba(0, 0, 0, 0);
+    color: black;
 }
 
 .image-button-container {
     width: auto;
     padding: 0;
 }
+
 .text_and_list {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-start; 
-    gap: 20px; 
-    width: 40%; 
+    align-items: flex-start;
+    gap: 20px;
+    width: 40%;
 }
 
-
-@media (max-width: 480px) {
-    .block-text {
-        width: 100%;
+@media (max-width: 499px) {
+    .header_mein_coaching_header {
+        font-size: 0.8rem;
+        margin-top: 0;
     }
 
-    .para_c1_line_small_window {
-        visibility: visible;
+    .block-title {
+        font-size: 1rem;
     }
 
-    .para_c1_line_small_window {
-        margin: 40px;
-        position: relative;
-        padding: 20px;
+    .block-image {
+        width: 90%;
+        height: auto;
     }
-    
-    .para_c1_line_small_window::after {
-        content: '';
-        position: absolute;
-        height: 2px;
-        background-color: black;
-        width: 450px;
+
+    .block-list-button {
+        width: 90%;
+        height: 40px;
+        font-size: 1rem;
     }
 
     .content-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
-        gap: auto;
-    }
-    
-    .block, .block-image, .block-list-button {
-        width: 100%;
-        text-align: center; 
-        margin-bottom: 20px;
-    }
-    
-    .block-text, .block-list {
-        width: auto; 
+        align-items: center; 
     }
 
-    .block-list li {
-        padding-left: 0; 
-    }
-    
-    .block-list li::before {
-        content: ''; 
-    }
-    
-    .block-image {
-        height: auto;
-        max-width: 600px; 
-        margin: 0 auto; 
-        left: 10%;    
-    }
-    
-    .block-list-button {
-        width: 80%; 
-        max-width: 400px;
-    }
-
-    .block-list {
-        width: 100%; 
-        text-align: left;
-        margin-bottom: 20px; 
-        margin: 0 auto;
-    }
-
-    .block-list li {
-        margin: 10px;
-    }
-    
-    .block-list li {
-        position: relative; 
-        padding-left: 20px;
-    }
-    
-    .block-list li::before {
-        content: '- '; 
-        position: absolute;
-        left: 0; 
-    }
-
-    .block-title {
-        font-size: 1.2rem;
-    }
-
-    .block-text, .block-list {
-        font-size: 1.5rem;
-    }
-
-    .block-only-text {
-        font-size: 1.2rem;
-        width: 80%;
-    }
-
-    .block-image {
-        height: auto;
-    }
-
-    .block {
-        width: 75%;
-        border: 0;
-    }
-
-    .block-list-button {
-        font-size: 1.4rem;
-        width: 100%;
-    }
-    
     .text_and_list {
-        width: 100%;
+        width: 90%;
     }
-}
 
-@media (min-width: 481px) and (max-width: 768px) {
     .block-text {
+        font-size: 0.8rem;
         width: 100%;
-    }
-
-    .para_c1_line_small_window {
-        visibility: visible;
-    }
-
-    .para_c1_line_small_window {
-        margin: 40px;
-        position: relative;
-        padding: 20px;
-    }
-    
-    .para_c1_line_small_window::after {
-        content: '';
-        position: absolute;
-        height: 2px;
-        background-color: black;
-        width: 450px;
-    }
-
-    .content-container {
-        display: flex;
-        flex-direction: column; 
-        justify-content: center;
-        align-items: center; 
-        gap: 20px; 
-    }
-    
-    .block, .block-image, .block-list-button {
-        width: 100%;
-        text-align: center; 
-        margin-bottom: 20px;
-    }
-    
-    .block-text, .block-list {
-        width: auto; 
-    }
-
-    .block-only-text {
-        font-size: 1.2rem;
-        width: 80%;
-    }
-    
-    .block-list li li {
-        padding-left: 0; 
-    }
-    
-    .block-list li::before li::before {
-        content: ''; 
-    }
-    
-    .block-image {
-        height: auto;
-        max-width: 600px; 
-        margin: 0 auto; 
-        left: 10%;    
-    }
-    
-    .block-list-button {
-        width: 80%; 
-        max-width: 400px;
+        padding: 10px; 
     }
 
     .block-list {
-        width: 100%; 
-        text-align: left;
-        margin-bottom: 20px;
-        margin: 0 auto; 
-    }
-
-    .block-list li {
-        margin: 10px;
-    }
-    
-    .block-list li {
-        position: relative; 
-        padding-left: 20px;
-    }
-    
-    .block-list li::before {
-        content: '- '; 
-        position: absolute;
-        left: 0; 
-    }
-
-    .block-title {
-        font-size: 1.2rem;
-    }
-
-    .block-text, .block-list {
-        font-size: 1.5rem;
-    }
-
-    .block-image {
-        height: auto;
-    }
-
-    .block {
-        width: 75%;
-        border: 0;
-    }
-
-    .block-list-button {
-        font-size: 1.4rem;
-        width: 100%;
-    }
-    .text_and_list {
-        width: 100%;
+        font-family: 'Roboto', sans-serif;
+        letter-spacing: 1px;
+        font-size: 0.8rem;
+        margin-top: -40px;
+        padding-left: 10px; 
     }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
-    .para_c1_line_small_window {
-        visibility: visible;
-    }
-
-    .para_c1_line_small_window {
-        margin: 40px;
-        position: relative;
-        padding: 20px;
-    }
-    
-    .para_c1_line_small_window::after {
-        content: '';
-        position: absolute;
-        height: 2px;
-        background-color: black;
-        width: 900px;
-    }
-
-    .content-container {
-        display: flex;
-        flex-direction: column; 
-        justify-content: center;
-        align-items: center; 
-        gap: 20px; 
-    }
-    
-    .block, .block-image, .block-list-button {
-        width: 100%;
-        text-align: center; 
-        margin-bottom: 20px;
-    }
-    
-    .block-text, .block-list {
-        width: auto; 
-    }
-
-    .block-only-text {
-        font-size: 1.2rem;
-        width: 80%;
-    }
-    
-    .block-list li li {
-        padding-left: 0; 
-    }
-    
-    .block-list li::before li::before {
-        content: ''; 
-    }
-    
-    .block-image {
-        height: auto;
-        max-width: 600px; 
-        margin: 0 auto;
-    }
-    
-    .block-list-button {
-        width: 80%; 
-        max-width: 400px;
-    }
-
-    .block-list {
-        width: 100%; 
-        text-align: left;
-        margin-bottom: 20px; 
-        margin: 0 auto;
-    }
-
-    .block-list li {
-        margin: 10px;
-    }
-    
-    .block-list li {
-        position: relative; 
-        padding-left: 20px;
-    }
-    
-    .block-list li::before {
-        content: '- '; 
-        position: absolute;
-        left: 0; 
-    }
-
-    .block-title {
-        font-size: 3rem;
-    }
-
-    .block-text, .block-list {
-        font-size: 1.5rem;
-    }
-
-    .block-image {
-        height: 300px;
-    }
-
-    .block {
-        width: 65%;
-        border: 0;
-    }
-
-    .block-list-button {
-        font-size: 2rem;
-        width: 100%;
-    }
-}
-
-@media (min-width: 1025px) and (max-width: 1500px) {
-    .para_c1_line_small_window {
-        visibility: visible;
-    }
-
-    .para_c1_line_small_window {
-        margin: 40px;
-        position: relative;
-        padding: 20px;
-    }
-    
-    .para_c1_line_small_window::after {
-        content: '';
-        position: absolute;
-        left: 10%;
-        right: 10%;
-        height: 2px;
-        background-color: black;
-    }
-
-    .content-container {
-        display: flex;
-        flex-direction: column; 
-        justify-content: center;
-        align-items: center; 
-        gap: 20px; 
-    }
-    
-    .block, .block-image, .block-list-button {
-        width: 100%; 
-        text-align: center; 
-        margin-bottom: 20px; 
-    }
-    
-    .block-text, .block-list {
-        width: auto; 
-    }
-    
-    .block-list li li {
-        padding-left: 0; 
-    }
-    
-    .block-list li::before li::before {
-        content: '';
-    }
-    
-    .block-list {
-        width: 100%; 
-        text-align: left;
-        margin-bottom: 20px; 
-    }
-
-    .block-list li {
-        margin: 10px;
-    }
-    
-    .block-list li {
-        position: relative; 
-        padding-left: 20px;
-    }
-    
-    .block-list li::before {
-        content: '- '; 
-        position: absolute;
-        left: 0; 
-    }
-
-    .block-image {
-        height: auto;
-        max-width: 600px;
-        margin: 0 auto; 
-    }
-    
-    .block-list-button {
-        width: 80%; 
-        max-width: 400px;
-        margin: 20px auto;
-    }
-
-    .block {
-        width: 65%;
-        border: 0;
-    }
-
-    .block-image {
-        height: 350px;
-    }
-
-    .block-list-button {
-        font-size: 2.2rem;
-        width: 100%;
-    }
-}
