--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -1,8 +1,8 @@
 .section_pricing {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .block_pricing_image {
@@ -10,50 +10,39 @@
     border-radius: 10px;
 }
 
-.training_type_list {
+.training_type_list, .training_type_list_no_header {
     list-style-type: none;
     font-size: 1.8rem;
-}
-
-.training_type_list li {
     font-weight: 100;
     margin: 0;
     padding: 0;
 }
 
 .training_type_list li {
-    position: relative; 
+    position: relative;
     padding-left: 20px;
 }
 
 .training_type_list li::before {
-    content: '- '; 
+    content: '- ';
     position: absolute;
-    left: 0; 
-}
-
-.training_type_list_no_header {
-    font-weight: 100;
-    margin: 0;
+    left: 0;
 }
 
 .training_type_list p {
-    position: relative; 
+    position: relative;
     font-weight: normal;
-    padding: 0;
-    margin: 0;
     margin-top: 30px;
 }
 
 .gruppentraining {
-    margin-bottom: 0;
-    margin-top: 0;
+    margin: 0;
 }
 
 .block_pricing {
     width: 100%;
     background-color: rgb(250, 250, 250);
-}  
+}
 
 .block_title_pricing {
     text-align: center;
@@ -61,19 +50,19 @@
 }
 
 .leistungen_typ_container {
-    display: flex; /* Verwenden Sie Flexbox */
-    flex-direction: column; /* Ordnet die Kinder (Buttons) vertikal an */
-    align-items: center; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .leistungen_type_button {
-    display: block; /* Block-Display (optional, da Buttons implizit als inline-block behandelt werden) */
-    height: 60px; 
-    width: auto; /* Breite wird durch Padding definiert */
-    padding: 0 50px; /* Setzt Padding horizontal */
-    margin-top: 30px; /* Abstand zwischen den Buttons */
-    border: 1px solid black; /* Definiert die Button-Rahmen */
-    font-size: 2rem; 
+    display: block;
+    height: 60px;
+    width: auto;
+    padding: 0 50px;
+    margin-top: 30px;
+    border: 1px solid black;
+    font-size: 2rem;
     font-weight: 100;
     letter-spacing: 2px;
     color: white;
@@ -83,11 +72,80 @@
 }
 
 .leistungen_type_button:hover {
-    background-color: rgba(0,0,0,0);
-    color: black;   
+    background-color: rgba(0, 0, 0, 0);
+    color: black;
 }
 
 .anfahrt_mwst {
     text-align: center;
     font-size: 1.4rem;
+}
+
+@media (max-width: 499px) {
+    .block_pricing_image {
+        display: none;
+    }
+
+    .block_title_pricing {
+        font-size: 0.8rem;
+    }
+
+    .block_title_pricing::before, .block_title_pricing::after{
+        content: '';
+        position: absolute;
+        left: 10%;
+        right: 10%;
+        height: 1px;
+        background-color: black;
+    }
+
+    .block_title_pricing::before {
+        top: 0;
+    }
+    
+    .block_title_pricing::after {
+        bottom: 0;
+    }
+
+    .training_type_list p {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .training_type_list li {
+        font-size: 0.9rem;
+        text-align: center;
+    }
+
+    .training_type_list li::before {
+        content: '';
+    }
+
+    .training_type_list {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .anfahrt_mwst {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+    }
+
+    .anfahrt_mwst p {
+        font-size: 0.8rem;
+        width: 80%;
+    }
+
+    .leistungen_type_button {
+        height: 40px;
+    }
+
+    .leistungen_type_button {
+        height: 30px;
+        font-size: 1rem;
+        font-weight: normal;
+        margin-top: 12px;
+    }
 }
