--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -175,7 +175,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center; 
+        align-items: center;
     }
 
     .text_and_list {
@@ -185,7 +185,7 @@
     .block-text {
         font-size: 0.8rem;
         width: 100%;
-        padding: 10px; 
+        padding: 10px;
     }
 
     .block-list {
@@ -193,7 +193,8 @@
         letter-spacing: 1px;
         font-size: 0.8rem;
         margin-top: -40px;
-        padding-left: 10px; 
+        padding-left: 0; 
     }
 }
+
 
