--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -19,17 +19,20 @@
     font-size: 1.8rem;
     font-weight: 100;
     margin: 0;
+    margin-left: 20px;
     padding: 0;
 }
 
 .training_type_list li {
     position: relative;
+    text-align: center;
 }
 
 .training_type_list p {
     position: relative;
     font-weight: normal;
     margin-top: 30px;
+    text-align: center;
 }
 
 .gruppentraining {
