--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -201,4 +201,42 @@
     }
 }
 
+@media (min-width: 481px) and (max-width: 768px) {
+    .block-title {
+        font-size: 2rem;
+    }
+
+    .image-button-container {
+        width: 100%;
+    }
+
+    .block-image {
+        width: 90%;
+        height: auto;
+    }
+
+    .block-list-button {
+        width: 90%;
+        height: 40px;
+        font-size: 1.4rem;
+        font-weight: normal;
+    }
+
+    .content-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .text_and_list {
+        width: 80%;
+    }
+
+    .block-text {
+        font-size: 1.8rem;
+        width: 100%;
+        padding: 10px;
+    }
+}
 
