just the lines on top and bottom of headers

--- a/CSS/components/infoBox.css
+++ b/CSS/components/infoBox.css
@@ -27,6 +27,7 @@
     margin: 40px;
     position: relative;
     padding: 20px;
+    width: 50%;
 }
 
 .info_box_header h1, .header_mein_hundetraining h1 {
