--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -8,6 +8,7 @@
 .block_pricing_image {
     height: 800px;
     border-radius: 10px;
+    padding-bottom: 30px;
 }
 
 .header_mein_coaching_header {
