fixed scrolling bug

--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -6,6 +6,7 @@
 
 .header {
     display: flex;
+    position: fixed;
     justify-content: baseline;
     align-items: center;
     background-color: black;
