--- a/CSS/utils/styles.css
+++ b/CSS/utils/styles.css
@@ -1,12 +1,20 @@
 body {
     margin: 0;
     width: 100%;
-    overflow-x: hidden;
 }
 
 html {
     font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
+    width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+img, video, iframe {
+  max-width: 100%;
+  height: auto;
 }
 
 p {
