--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -6,10 +6,10 @@
 
 .header {
     display: flex;
-    justify-content: baseline;
+    justify-content: space-evenly;
     align-items: center;
     background-color: black;
-    padding-left: 210px;
+    padding-left: 250px;
     padding-right: 200px;
     padding-bottom: 30px;
     height: 160px;
@@ -31,7 +31,7 @@
     text-decoration: none;
     color: white;
     margin: 0px 30px 10px 30px;
-    padding-bottom: 10px;
+    padding: 0px 5px 10px 5px;
     display: inline-block;
     position: relative;
     transition: color 0.3s;
