--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -32,7 +32,7 @@
 .training_type_list p {
     position: relative;
     font-weight: normal;
-    margin-top: 30px;
+    padding-top: 25px;
     text-align: center;
 }
 
