--- a/CSS/components/sectionPricing.css
+++ b/CSS/components/sectionPricing.css
@@ -52,8 +52,10 @@
 
 .leistungen_typ_container {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 20px;
 }
 
 .leistungen_type_button {
@@ -82,6 +84,10 @@
     font-size: 1.4rem;
 }
 
+.anfahrt_mwst p {
+    padding-top: 30px;
+}
+
 @media (max-width: 499px) {
     .block_pricing_image {
         display: none;
@@ -98,6 +104,7 @@
     .training_type_list p {
         font-size: 1rem;
         text-align: center;
+        padding-top: 40px;
     }
 
     .training_type_list li {
